--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     />
   </head>
   <body>
+    <header class="container">
+      <div class="logo">
+        <a href="index.html">IS</a>
+      </div>
+      <ul class="menu">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="#">Услуги</a></li>
+        <li><a href="#">Статьи</a></li>
+        <li><a href="#">Обо мне</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+    </header>
     <section class="first-section">
-      <header class="container">
-        <div class="logo">
-          <a href="index.html">IS</a>
-        </div>
-        <ul class="menu">
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="#">Услуги</a></li>
-          <li><a href="#">Статьи</a></li>
-          <li><a href="#">Обо мне</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-      </header>
       <div class="info">
         <h1>социальный педагог ирина сударикова</h1>
         <p>Тренинги, консультации, группы поддержки детей и взрослых</p>
@@ -34,27 +34,67 @@
     <section class="areas">
       <h1>Направления в которых я работаю</h1>
       <div class="areasGrid">
-        <div id="grid1" class="areaScale">
+        <div class="grid1 areaScale">
           <img src="images/training.jpg" alt="training" />
           <div class="gridInfo">
             <h1>Тренинги</h1>
             <p>
-              Lorem ipsum  dolor sit amet consectetur adipisicing elit. Veniam
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
             </p>
             <a href="#">перейти</a>
           </div>
         </div>
-        <div id="grid2">консультации</div>
-        <div id="grid3" class="areaScale">группа поддержки</div>
-        <div id="grid4" class="areaScale">
-          <img src="images/childClub.jpg" alt="childClub" /><div class="gridInfo">
-            <h1>Детский клуб</h1>
+        <div class="grid2 areaScale">
+          <img src="images/consultation.jpg" alt="consultation" />
+          <div class="gridInfo">
+            <h1>Констультации</h1>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
             </p>
             <a href="#">перейти</a>
+          </div>
+        </div>
+        <div class="grid3 areaScale">
+          <img src="images/support.jpeg" alt="support" />
+          <div class="gridInfo">
+            <h1>Группы поддержки</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
+            </p>
+            <a href="#">перейти</a>
+          </div>
+        </div>
+      <div class="grid4 areaScale">
+        <img src="images/childClub.jpg" alt="childClub" />
+        <div class="gridInfo">
+          <h1>Детский клуб</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam</p>
+          <a href="#">перейти</a>
+        </div>
+      </div>
+      <div class="grid5 areaScale">
+        <img src="images/womenClub.jpg" alt="womenClub" />
+        <div class="gridInfo">
+          <h1>Женский клуб</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam</p>
+          <a href="#">перейти</a>
         </div>
       </div>
     </section>
+    <footer class="footContainer">
+<div class="footContacts">
+  
+  <a href="mailto:arinyhka@yandex.ru">по всем вопросам</a>
+  <a href="mailto:arinyhka@yandex.ru">arinyhka@yandex.ru</a>
+  <div class="phone"><a href="tel:+79272620426"></a>+79272620426</div>
+  <span>&copy; 2022 И.В.Сударикова</span>
+  <div class="footIcons">
+    <a href="#"><img src="icons/vk.png" alt="vkIcon"></a>
+    <a href="#"><img src="icons/instagram.png" alt="instIcon"></a>
+    <a href="#"><img src="icons/viber.png" alt="viberIcon"></a>
+    <a href="#"><img src="icons/whatsapp.png" alt="whatsappIcon"></a>
+  </div>
+</div>
+    </footer>
   </body>
 </html>
