--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width" />
     <title>Тренинги Ирины Судариковой</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/adaptive.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Montserrat:wght@100;400;700&display=swap"
       rel="stylesheet"
@@ -18,10 +19,17 @@
       </div>
       <ul class="menu">
         <li><a href="index.html">Главная</a></li>
-        <li><a href="#">Услуги</a></li>
+        <li class="dropDownList"><a href="#">Услуги</a>
+          <ul class="subMenu">
+          <li><a href="#">Тренинги</a></li>
+          <li><a href="#">Консультации</a></li>
+          <li><a href="#">Группы поддержки</a></li>
+          <li><a href="#">Женский клуб</a></li>
+          <li><a href="#">Детский клуб</a></li>
+         </ul></li>
         <li><a href="#">Статьи</a></li>
-        <li><a href="#">Обо мне</a></li>
-        <li><a href="#">Контакты</a></li>
+        <li><a href="aboutMe.html">Обо мне</a></li>
+        <li><a href="contacts.html">Контакты</a></li>
       </ul>
     </header>
     <section class="first-section">
@@ -83,10 +91,10 @@
     </section>
     <footer class="footContainer">
 <div class="footContacts">
-  
   <a href="mailto:arinyhka@yandex.ru">по всем вопросам</a>
   <a href="mailto:arinyhka@yandex.ru">arinyhka@yandex.ru</a>
-  <div class="phone"><a href="tel:+79272620426"></a>+79272620426</div>
+  <a href="tel:+79272620426"></a>+79272620426
+</div>
   <span>&copy; 2022 И.В.Сударикова</span>
   <div class="footIcons">
     <a href="#"><img src="icons/vk.png" alt="vkIcon"></a>
