--- a/contacts.html
+++ b/contacts.html
@@ -7,35 +7,42 @@
     <title>Тренинги Ирины Судариковой - Контакты</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/adaptive.css">
-    <link
-      href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Montserrat:wght@100;400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Comfortaa&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="container">
-        <div class="logo">
-          <a href="index.html">IS</a>
-        </div>
-        <ul class="menu">
-          <li><a href="index.html">Главная</a></li>
-          <li class="dropDownList"><a href="#">Услуги</a>
-            <ul class="subMenu">
-            <li><a href="#">Тренинги</a></li>
-            <li><a href="#">Консультации</a></li>
-            <li><a href="#">Группы поддержки</a></li>
-            <li><a href="#">Женский клуб</a></li>
-            <li><a href="#">Детский клуб</a></li>
-           </ul></li>
-          <li><a href="#">Статьи</a></li>
-          <li><a href="aboutMe.html">Обо мне</a></li>
-          <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-      </header>
+  <header class="container">
+    <div class="logo">
+      <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+    </div>
+    <nav class="menu">
+     <ul>
+      <li><a href="index.html">Главная</a></li>
+      <li class="colorLemon">
+       <div class="dropDownList">Услуги
+         <nav class="subMenu">
+           <a href="traninng.html">Тренинги</a>
+           <a href="consultation.html">Консультации</a>
+           <a href="supportGroup.html">Группы поддержки</a>
+           <a href="#">Женский клуб</a>
+           <a href="#">Детский клуб</a>
+          </nav>
+       </div>
+      </li>
+      <li class="colorPink"><a href="#" >Статьи</a></li>
+      <li><a href="aboutMe.html">Обо мне</a></li>
+      <li class="colorWhite"><a href="contacts.html">Контакты</a></li>
+     </ul>
+    </nav>
+  </header>
       <section class="contacts">
+        <div class="contactColors">
+        <div class="contactPink"></div>
+        <div class="contactWhite"></div>
+        <div class="contactSalad"></div>
+       </div>
           <div class="contactsText">По всем вопросам...</div>
           <div class="contactsPhone">+7(927)2620426</div>
-          <div class="contactsMail">arinyhka@yandex.ru</div>
+          <div class="contactsMail"><a href="mailto:arinyhka@yandex.ru">arinyhka@yandex.ru</a></div>
       </section>
       <footer class="footContainer">
         <div class="footContacts">
@@ -45,7 +52,7 @@
         </div>
           <span>&copy; 2022 И.В.Сударикова</span>
           <div class="footIcons">
-            <a href="#"><img src="icons/vk.png" alt="vkIcon"></a>
+            <a href="https://vk.com/id60577503"><img src="icons/vk.png" alt="vkIcon"></a>
             <a href="#"><img src="icons/instagram.png" alt="instIcon"></a>
             <a href="#"><img src="icons/viber.png" alt="viberIcon"></a>
             <a href="#"><img src="icons/whatsapp.png" alt="whatsappIcon"></a>
