--- a/index.html
+++ b/index.html
@@ -5,39 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width" />
     <title>Тренинги Ирины Судариковой</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/adaptive.css">
-    <link
-      href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Montserrat:wght@100;400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Comfortaa&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
   </head>
   <body>
     <header class="container">
       <div class="logo">
-        <a href="index.html">IS</a>
+        <a href="index.html"><img src="images/logo.png" alt="logo"></a>
       </div>
-      <ul class="menu">
+      <nav class="menu">
+       <ul>
         <li><a href="index.html">Главная</a></li>
-        <li class="dropDownList"><a href="#">Услуги</a>
-          <ul class="subMenu">
-          <li><a href="#">Тренинги</a></li>
-          <li><a href="#">Консультации</a></li>
-          <li><a href="#">Группы поддержки</a></li>
-          <li><a href="#">Женский клуб</a></li>
-          <li><a href="#">Детский клуб</a></li>
-         </ul></li>
-        <li><a href="#">Статьи</a></li>
+        <li class="colorLemon">
+         <div class="dropDownList">Услуги
+           <nav class="subMenu">
+             <a href="traninng.html">Тренинги</a>
+             <a href="consultation.html">Консультации</a>
+             <a href="supportGroup.html">Группы поддержки</a>
+             <a href="#">Женский клуб</a>
+             <a href="#">Детский клуб</a>
+            </nav>
+         </div>
+        </li>
+        <li class="colorPink"><a href="#" >Статьи</a></li>
         <li><a href="aboutMe.html">Обо мне</a></li>
-        <li><a href="contacts.html">Контакты</a></li>
-      </ul>
+        <li class="colorWhite"><a href="contacts.html">Контакты</a></li>
+       </ul>
+      </nav>
     </header>
     <section class="first-section">
       <div class="info">
-        <h1>социальный педагог ирина сударикова</h1>
+        <h1>Cоциальный педагог <br> Ирина Сударикова</h1>
         <p>Тренинги, консультации, группы поддержки детей и взрослых</p>
-        <a href="#">записаться</a>
       </div>
+      <div class="block1"></div>
+      <div class="block2"><a href="#">записаться</a></div>
     </section>
     <section class="areas">
       <h1>Направления в которых я работаю</h1>
@@ -49,7 +52,7 @@
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
             </p>
-            <a href="#">перейти</a>
+            <a href="traninng.html">перейти</a>
           </div>
         </div>
         <div class="grid2 areaScale">
@@ -59,7 +62,7 @@
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
             </p>
-            <a href="#">перейти</a>
+            <a href="consultation.html">перейти</a>
           </div>
         </div>
         <div class="grid3 areaScale">
@@ -69,7 +72,7 @@
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
             </p>
-            <a href="#">перейти</a>
+            <a href="supportGroup.html">перейти</a>
           </div>
         </div>
       <div class="grid4 areaScale">
@@ -88,6 +91,16 @@
           <a href="#">перейти</a>
         </div>
       </div>
+      <div class="grid6"></div>
+      <div class="grid7"></div>
+      <div class="grid8"></div>
+      <div class="grid9"></div>
+      <div class="grid10"></div>
+      <div class="grid11"></div>
+      <div class="grid12"></div>
+      <div class="grid13"></div>
+      <div class="grid14"></div>
+      <div class="grid15"></div>
     </section>
     <footer class="footContainer">
 <div class="footContacts">
@@ -97,7 +110,7 @@
 </div>
   <span>&copy; 2022 И.В.Сударикова</span>
   <div class="footIcons">
-    <a href="#"><img src="icons/vk.png" alt="vkIcon"></a>
+    <a href="https://vk.com/id60577503"><img src="icons/vk.png" alt="vkIcon"></a>
     <a href="#"><img src="icons/instagram.png" alt="instIcon"></a>
     <a href="#"><img src="icons/viber.png" alt="viberIcon"></a>
     <a href="#"><img src="icons/whatsapp.png" alt="whatsappIcon"></a>
