--- a/aboutMe.html
+++ b/aboutMe.html
@@ -7,31 +7,55 @@
     <title>Тренинги Ирины Судариковой - Обо мне</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/adaptive.css">
-    <link
-      href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Montserrat:wght@100;400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Comfortaa&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/aboutMe.css">
   </head>
   <body>
     <header class="container">
-        <div class="logo">
-          <a href="index.html">IS</a>
-        </div>
-        <ul class="menu">
-          <li><a href="index.html">Главная</a></li>
-          <li class="dropDownList"><a href="#">Услуги</a>
-            <ul class="subMenu">
-            <li><a href="#">Тренинги</a></li>
-            <li><a href="#">Консультации</a></li>
-            <li><a href="#">Группы поддержки</a></li>
-            <li><a href="#">Женский клуб</a></li>
-            <li><a href="#">Детский клуб</a></li>
-           </ul></li>
-          <li><a href="#">Статьи</a></li>
-          <li><a href="aboutMe.html">Обо мне</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-      </header>
+      <div class="logo">
+        <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+      </div>
+      <nav class="menu">
+       <ul>
+        <li><a href="index.html">Главная</a></li>
+        <li class="colorLemon">
+         <div class="dropDownList">Услуги
+           <nav class="subMenu">
+             <a href="traninng.html">Тренинги</a>
+             <a href="consultation.html">Консультации</a>
+             <a href="supportGroup.html">Группы поддержки</a>
+             <a href="#">Женский клуб</a>
+             <a href="#">Детский клуб</a>
+            </nav>
+         </div>
+        </li>
+        <li class="colorPink"><a href="#" >Статьи</a></li>
+        <li><a href="aboutMe.html">Обо мне</a></li>
+        <li class="colorWhite"><a href="contacts.html">Контакты</a></li>
+       </ul>
+      </nav>
+    </header>
+      <section class="aboutMe">
+         <div class="aboutMeDV">
+           <img src="images/AboutMe.jpg" alt="aboutMe" class="aboutMePicture">
+            <div class="aboutMeText"> <h1>Ирина Сударикова</h1> <h6>Социальный педагог</h6> <p>Меня зовут Анна Микоян, я профессиональный клинический психолог, психолог-консультант, экзистенциальный терапевт. Являюсь действительным членом Восточно-Европейской Ассоциации Экзистенциальной Терапии. Я помогаю людям лучше понять себя, по-новому взглянуть на то, как они строят свою жизнь, решить имеющиеся проблемы и разобраться в причинах их возникновения.</p></div>
+         </div>
+         <p class="interests">
+          Увлекаюсь психологией. Люблю фотографировать. Обожаю свою дачу! Собираю притчи, пишу сценарии, записываю свои и чужие истории, организую и провожу праздники, организую досуг. Придумываю интересные проекты и воплощаю их в жизнь!
+         </p>
+         <div class="education">
+           <h1>Мои университеты</h1>
+           <ul>
+           <li>Педогогический техникум(КИПТ)</li>
+           <li>Самарский Государственный университет (Социальная педагогика)</li>
+           <li>Вечерняя школа, отделение социально-педогогической поддержки для трудных подростков </li>
+           <li>&quot;Тренинг тренеров&quot; Ирины Шевцовой</li>
+           <li>Таганрогская психологическая мастерская Гештальта</li>
+           <li>Республиканский гуммунитарный институт Санкт-Петербурского государственного университета (повышение квалификации &mdash; педагогическое мастерство)</li>
+          </ul>
+         </div>
+         <div class="purposeWork"><p><i><b>Цель работы</b> &mdash; помочь человеку решить сложные ситуации в жизни, обрести внутреннюю <br> гармонию, наладить личные отношения, выстроить правильное общение с ребенком, <br> коллегами, друзьями. Помочь принять и полюбить себя, стабилизировать самооценку, <br> избавиться от обид, преодолеть кризисы, простить и отпустить прошлое, освободиться <br> от блоков, которые мешают жить счастливо.</i></p><div class="purposeImage"><img src="images/aboutMePurpose.png" alt="aboutMePurpose"><p>Ирина Сударикова</p></div></div>
+      </section>
       <footer class="footContainer">
         <div class="footContacts">
           <a href="mailto:arinyhka@yandex.ru">по всем вопросам</a>
@@ -40,7 +64,7 @@
         </div>
           <span>&copy; 2022 И.В.Сударикова</span>
           <div class="footIcons">
-            <a href="#"><img src="icons/vk.png" alt="vkIcon"></a>
+            <a href="https://vk.com/id60577503"><img src="icons/vk.png" alt="vkIcon"></a>
             <a href="#"><img src="icons/instagram.png" alt="instIcon"></a>
             <a href="#"><img src="icons/viber.png" alt="viberIcon"></a>
             <a href="#"><img src="icons/whatsapp.png" alt="whatsappIcon"></a>
