--- a/aboutMe.html
+++ b/aboutMe.html
@@ -6,39 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Тренинги Ирины Судариковой - Обо мне</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/adaptive.css">
+    <link rel="stylesheet" href="css/media.css">
     <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Comfortaa&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/aboutMe.css">
   </head>
   <body>
     <header class="container">
       <div class="logo">
-        <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+        <a href="index.html"><img src="images/logo.png" alt="logo" /></a>
       </div>
+      <div class="openMenu">&#9776;</div>
       <nav class="menu">
-       <ul>
-        <li><a href="index.html">Главная</a></li>
-        <li class="colorLemon">
-         <div class="dropDownList">Услуги
-           <nav class="subMenu">
-             <a href="traninng.html">Тренинги</a>
-             <a href="consultation.html">Консультации</a>
-             <a href="supportGroup.html">Группы поддержки</a>
-             <a href="#">Женский клуб</a>
-             <a href="#">Детский клуб</a>
-            </nav>
-         </div>
-        </li>
-        <li class="colorPink"><a href="#" >Статьи</a></li>
-        <li><a href="aboutMe.html">Обо мне</a></li>
-        <li class="colorWhite"><a href="contacts.html">Контакты</a></li>
-       </ul>
+        <ul>
+          <li><a href="index.html">Главная</a></li>
+          <li class="colorLemon">
+            <div class="dropDownList">
+              Услуги
+              <nav class="subMenu">
+                <a href="traninng.html">Тренинги</a>
+                <a href="consultation.html">Консультации</a>
+                <a href="supportGroup.html">Группы поддержки</a>
+                <a href="womenClub.html">Женский клуб</a>
+                <a href="childClub.html">Детский клуб</a>
+              </nav>
+            </div>
+          </li>
+          <li class="adaptiveSubMenu"><a href="traninng.html">Тренинги</a></li>
+          <li class="adaptiveSubMenu">
+            <a href="consultation.html">Консультации</a>
+          </li>
+          <li class="adaptiveSubMenu">
+            <a href="supportGroup.html">Группы поддержки</a>
+          </li>
+          <li class="adaptiveSubMenu">
+            <a href="womenClub.html">Женский клуб</a>
+          </li>
+          <li class="adaptiveSubMenu">
+            <a href="childClub.html">Детский клуб</a>
+          </li>
+          <li class="colorPink"><a href="stories.html">Истории</a></li>
+          <li><a href="aboutMe.html">Обо мне</a></li>
+          <li class="colorWhite"><a href="contacts.html">Контакты</a></li>
+        </ul>
       </nav>
     </header>
-      <section class="aboutMe">
+    <section class="aboutMe">
          <div class="aboutMeDV">
            <img src="images/AboutMe.jpg" alt="aboutMe" class="aboutMePicture">
-            <div class="aboutMeText"> <h1>Ирина Сударикова</h1> <h6>Социальный педагог</h6> <p>Меня зовут Анна Микоян, я профессиональный клинический психолог, психолог-консультант, экзистенциальный терапевт. Являюсь действительным членом Восточно-Европейской Ассоциации Экзистенциальной Терапии. Я помогаю людям лучше понять себя, по-новому взглянуть на то, как они строят свою жизнь, решить имеющиеся проблемы и разобраться в причинах их возникновения.</p></div>
+            <div class="aboutMeText"> <h1>Ирина Сударикова</h1> <h6>Социальный педагог</h6> <p>Провожу тренинги: личностного роста, женские тренинги, тренинги общения с подростками и детьми. Занимаюсь профилактикой асоциального поведения подростков. Консультирую: детско-родительские отношения, развитие детей, формирование и развитие эмоционального интеллекта, личностные и семейные кризисы. Организовала и веду женский клуб "Сударушка", а так же детско-подростковый клуб. Разработчик и ведущая игры "Радуга Радости". Веду группы поддержки для женщин. Опыт групповой работы более тридцати пяти лет. Постоянно повышаю свою квалификацию.</p></div>
          </div>
          <p class="interests">
           Увлекаюсь психологией. Люблю фотографировать. Обожаю свою дачу! Собираю притчи, пишу сценарии, записываю свои и чужие истории, организую и провожу праздники, организую досуг. Придумываю интересные проекты и воплощаю их в жизнь!
@@ -55,21 +69,22 @@
           </ul>
          </div>
          <div class="purposeWork"><p><i><b>Цель работы</b> &mdash; помочь человеку решить сложные ситуации в жизни, обрести внутреннюю <br> гармонию, наладить личные отношения, выстроить правильное общение с ребенком, <br> коллегами, друзьями. Помочь принять и полюбить себя, стабилизировать самооценку, <br> избавиться от обид, преодолеть кризисы, простить и отпустить прошлое, освободиться <br> от блоков, которые мешают жить счастливо.</i></p><div class="purposeImage"><img src="images/aboutMePurpose.png" alt="aboutMePurpose"><p>Ирина Сударикова</p></div></div>
-      </section>
-      <footer class="footContainer">
+    </section>
+    <footer class="footContainer">
         <div class="footContacts">
-          <a href="mailto:arinyhka@yandex.ru">по всем вопросам</a>
+          <a href="mailto:arinyhka@yandex.ru">По всем вопросам</a>
           <a href="mailto:arinyhka@yandex.ru">arinyhka@yandex.ru</a>
-          <a href="tel:+79272620426"></a>+79272620426
+          <a href="tel:+79272620426">+79272620426</a>
         </div>
           <span>&copy; 2022 И.В.Сударикова</span>
           <div class="footIcons">
             <a href="https://vk.com/id60577503"><img src="icons/vk.png" alt="vkIcon"></a>
-            <a href="#"><img src="icons/instagram.png" alt="instIcon"></a>
-            <a href="#"><img src="icons/viber.png" alt="viberIcon"></a>
-            <a href="#"><img src="icons/whatsapp.png" alt="whatsappIcon"></a>
+            <a href="https://www.instagram.com/sudarikova4895"><img src="icons/instagram.png" alt="instIcon"></a>
+            <a href="viber://chat?number=%2B79272620426"><img src="icons/viber.png" alt="viberIcon"></a>
+            <a href="whatsapp://send?phone=79272620426"><img src="icons/whatsapp.png" alt="whatsappIcon"></a>
           </div>
         </div>
-            </footer>
+    </footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
