--- a/contacts.html
+++ b/contacts.html
@@ -6,58 +6,75 @@
     <meta name="viewport" content="width=device-width">
     <title>Тренинги Ирины Судариковой - Контакты</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/adaptive.css">
+    <link rel="stylesheet" href="css/media.css">
     <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Comfortaa&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="container">
     <div class="logo">
-      <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+      <a href="index.html"><img src="images/logo.png" alt="logo" /></a>
     </div>
+    <div class="openMenu">&#9776;</div>
     <nav class="menu">
-     <ul>
-      <li><a href="index.html">Главная</a></li>
-      <li class="colorLemon">
-       <div class="dropDownList">Услуги
-         <nav class="subMenu">
-           <a href="traninng.html">Тренинги</a>
-           <a href="consultation.html">Консультации</a>
-           <a href="supportGroup.html">Группы поддержки</a>
-           <a href="#">Женский клуб</a>
-           <a href="#">Детский клуб</a>
-          </nav>
-       </div>
-      </li>
-      <li class="colorPink"><a href="#" >Статьи</a></li>
-      <li><a href="aboutMe.html">Обо мне</a></li>
-      <li class="colorWhite"><a href="contacts.html">Контакты</a></li>
-     </ul>
+      <ul>
+        <li><a href="index.html">Главная</a></li>
+        <li class="colorLemon">
+          <div class="dropDownList">
+            Услуги
+            <nav class="subMenu">
+              <a href="traninng.html">Тренинги</a>
+              <a href="consultation.html">Консультации</a>
+              <a href="supportGroup.html">Группы поддержки</a>
+              <a href="womenClub.html">Женский клуб</a>
+              <a href="childClub.html">Детский клуб</a>
+            </nav>
+          </div>
+        </li>
+        <li class="adaptiveSubMenu"><a href="traninng.html">Тренинги</a></li>
+        <li class="adaptiveSubMenu">
+          <a href="consultation.html">Консультации</a>
+        </li>
+        <li class="adaptiveSubMenu">
+          <a href="supportGroup.html">Группы поддержки</a>
+        </li>
+        <li class="adaptiveSubMenu">
+          <a href="womenClub.html">Женский клуб</a>
+        </li>
+        <li class="adaptiveSubMenu">
+          <a href="childClub.html">Детский клуб</a>
+        </li>
+        <li class="colorPink"><a href="stories.html">Истории</a></li>
+        <li><a href="aboutMe.html">Обо мне</a></li>
+        <li class="colorWhite"><a href="contacts.html">Контакты</a></li>
+      </ul>
     </nav>
   </header>
       <section class="contacts">
-        <div class="contactColors">
-        <div class="contactPink"></div>
-        <div class="contactWhite"></div>
-        <div class="contactSalad"></div>
+       <div class="contactsBlock"> 
+        <div class="contactsText">Для записи</div>
+        <div class="contactsPhone">+7(927)2620426</div>
+        <div class="contactsMail">arinyhka@yandex.ru</div>
+        <div class="contactBtns">
+          <a href="tel:+79272620426" class="bgbtnpink">Позвонить</a>
+          <a href="mailto:arinyhka@yandex.ru" class="bgbtnsalad">Написать</a>
+        </div>
        </div>
-          <div class="contactsText">По всем вопросам...</div>
-          <div class="contactsPhone">+7(927)2620426</div>
-          <div class="contactsMail"><a href="mailto:arinyhka@yandex.ru">arinyhka@yandex.ru</a></div>
       </section>
       <footer class="footContainer">
         <div class="footContacts">
-          <a href="mailto:arinyhka@yandex.ru">по всем вопросам</a>
+          <a href="mailto:arinyhka@yandex.ru">По всем вопросам</a>
           <a href="mailto:arinyhka@yandex.ru">arinyhka@yandex.ru</a>
-          <a href="tel:+79272620426"></a>+79272620426
+          <a href="tel:+79272620426">+79272620426</a>
         </div>
           <span>&copy; 2022 И.В.Сударикова</span>
           <div class="footIcons">
             <a href="https://vk.com/id60577503"><img src="icons/vk.png" alt="vkIcon"></a>
-            <a href="#"><img src="icons/instagram.png" alt="instIcon"></a>
-            <a href="#"><img src="icons/viber.png" alt="viberIcon"></a>
-            <a href="#"><img src="icons/whatsapp.png" alt="whatsappIcon"></a>
+            <a href="https://www.instagram.com/sudarikova4895"><img src="icons/instagram.png" alt="instIcon"></a>
+            <a href="viber://chat?number=%2B79272620426"><img src="icons/viber.png" alt="viberIcon"></a>
+            <a href="whatsapp://send?phone=79272620426"><img src="icons/whatsapp.png" alt="whatsappIcon"></a>
           </div>
         </div>
-            </footer>
+      </footer>
+      <script src="js/script.js"></script>
 </body>
 </html>
