--- a/consultation.html
+++ b/consultation.html
@@ -6,58 +6,98 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Тренинги Ирины Судариковой - Консультации</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/adaptive.css">
+    <link rel="stylesheet" href="css/media.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Montserrat:wght@100;400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/consultation.css">
+   
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="container">
     <div class="logo">
-      <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+      <a href="index.html"><img src="images/logo.png" alt="logo" /></a>
     </div>
+    <div class="openMenu">&#9776;</div>
     <nav class="menu">
-     <ul>
-      <li><a href="index.html">Главная</a></li>
-      <li class="colorLemon">
-       <div class="dropDownList">Услуги
-         <nav class="subMenu">
-           <a href="traninng.html">Тренинги</a>
-           <a href="consultation.html">Консультации</a>
-           <a href="supportGroup.html">Группы поддержки</a>
-           <a href="#">Женский клуб</a>
-           <a href="#">Детский клуб</a>
-          </nav>
-       </div>
-      </li>
-      <li class="colorPink"><a href="#" >Статьи</a></li>
-      <li><a href="aboutMe.html">Обо мне</a></li>
-      <li class="colorWhite"><a href="contacts.html">Контакты</a></li>
-     </ul>
+      <ul>
+        <li><a href="index.html">Главная</a></li>
+        <li class="colorLemon">
+          <div class="dropDownList">
+            Услуги
+            <nav class="subMenu">
+              <a href="traninng.html">Тренинги</a>
+              <a href="consultation.html">Консультации</a>
+              <a href="supportGroup.html">Группы поддержки</a>
+              <a href="womenClub.html">Женский клуб</a>
+              <a href="childClub.html">Детский клуб</a>
+            </nav>
+          </div>
+        </li>
+        <li class="adaptiveSubMenu"><a href="traninng.html">Тренинги</a></li>
+        <li class="adaptiveSubMenu">
+          <a href="consultation.html">Консультации</a>
+        </li>
+        <li class="adaptiveSubMenu">
+          <a href="supportGroup.html">Группы поддержки</a>
+        </li>
+        <li class="adaptiveSubMenu">
+          <a href="womenClub.html">Женский клуб</a>
+        </li>
+        <li class="adaptiveSubMenu">
+          <a href="childClub.html">Детский клуб</a>
+        </li>
+        <li class="colorPink"><a href="stories.html">Истории</a></li>
+        <li><a href="aboutMe.html">Обо мне</a></li>
+        <li class="colorWhite"><a href="contacts.html">Контакты</a></li>
+      </ul>
     </nav>
   </header>
       <section class="consultation">
-<div class="childParentsRelationship"><img src="images/parentChildren.jpg" alt="parentChildren" class="parentChildrenImg"> <div class="parentChildrenText textLeft textLeftcolorPink"><h1>Детско-родительские отношения</h1> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati neque, ea voluptates voluptatibus delectus similique aut. Corporis necessitatibus id veniam distinctio enim at alias voluptatem, ex autem. Dignissimos, dolor totam?</p></div></div>
-<div class="childParentsRelationship"><div class="parentChildrenText textRight"><h1>Развитие эмоционального интеллекта у детей</h1> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati neque, ea voluptates voluptatibus delectus similique aut. Corporis necessitatibus id veniam distinctio enim at alias voluptatem, ex autem. Dignissimos, dolor totam?</p></div><img src="images/imotionalIntellect.jpg" alt="parentChildren" class="parentChildrenImg"> </div>
-<div class="childParentsRelationship"><img src="images/crysies.jpg" alt="parentChildren" class="parentChildrenImg"> <div class="parentChildrenText textLeft textLeftcolorSalad"><h1>Личностные и семейные кризисы</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati neque, ea voluptates voluptatibus delectus similique aut. Corporis necessitatibus id veniam distinctio enim at alias voluptatem, ex autem. Dignissimos, dolor totam?</p></div></div>
+        <div class="bgc_color"></div>
+<div class="consultationtabcontainer">
+  <div class="consultationtabcontent"><img src="images/parentChildren.jpg" alt="parentChildren"><div class="consultationtabcontent__descr">Самостоятельность и ответственность - два понятия неразрывно связанные между собой. 
+  Именно эти два понятия и звучат чаще всего в запросах родителей. 
+  <br>
+  Зачастую получается так, что ребенок или подросток  хочет что-либо делать по-своему, подразумевая при этом, что за последствия его поступков будет отвечать не он, а как и раньше родители. 
+  Ребенок или взрослый, понимающий, что самостоятельные решения влекут и собственную ответственность за них, начинает относиться к своим поступкам намного более обдуманно. </div></div>
+  <div class="consultationtabcontent"><img src="images/imotionalIntellect.jpg" alt="imotionalIntellect"><div class="consultationtabcontent__descr">EQ или эмоциональный интеллект — это способность понимать свои чувства и чувства других людей, умение справляться с эмоциями и направлять их в благое русло. Современные научные исследования показали, что развитый EQ у ребенка помогает ему решать сложные задачи и справляться с конфликтными ситуациями. Обладая эмоциональным интеллектом, ребенок легко преодолевает сложности, опираясь на свои сильные стороны.</div></div>
+  <div class="consultationtabcontent"><img src="images/crysies.jpg" alt="crysies"><div class="consultationtabcontent__descr">
+  Чтобы быть хорошим родителем или жить в гармонии с партнёром, необходимо  познать себя. 
+  <br>
+  Что я за человек? Чем для меня является семья? Как вижу я свое участие в партнерстве? Чем мой семейный союз отличается от миллионов других союзов, по каким правилам он живёт, по каким законам развивается? Какие особенности моего характера, навыки, умения помогут мне быть счастливым? Эти и другие темы звучат на личных встречах.</div></div>
+  <div class="consultationtabheader">
+    <h3>Виды консультаций</h3>
+    <div class="consultationtabheader__item consultationtabheader__item__active">Детско-Родительские отношения. </div>
+    <div class="consultationtabheader__item">Развитие эмоционального  интеллекта.</div>
+    <div class="consultationtabheader__item">Личные и семейные кризисы. </div>
+  </div>
+</div>
+<div class="consultationinfocontainer">
+  <div class="consultationcontainerinfo">  Если Вы думаете о психологическом здоровье ваших детей, об их эмоциональном опыте... <br>
+    Если Вы заботитесь о том, чтобы выстраивать конструктивные отношения с детьми и другими людьми... <br>
+    Если Вы хотите позитивно относится к себе... <br>
+    Если Вы хотите получить новые впечатления... <br>
+    То эти занятия для Вас и Ваших детей! <br></div>
+  </div>
 </section>
-      <footer class="footContainer">
-        <div class="footContacts">
-          <a href="mailto:arinyhka@yandex.ru">по всем вопросам</a>
-          <a href="mailto:arinyhka@yandex.ru">arinyhka@yandex.ru</a>
-          <a href="tel:+79272620426"></a>+79272620426
-        </div>
-          <span>&copy; 2022 И.В.Сударикова</span>
-          <div class="footIcons">
-            <a href="https://vk.com/id60577503"><img src="icons/vk.png" alt="vkIcon"></a>
-            <a href="#"><img src="icons/instagram.png" alt="instIcon"></a>
-            <a href="#"><img src="icons/viber.png" alt="viberIcon"></a>
-            <a href="#"><img src="icons/whatsapp.png" alt="whatsappIcon"></a>
-          </div>
-        </div>
-            </footer>
+<footer class="footContainer">
+  <div class="footContacts">
+    <a href="mailto:arinyhka@yandex.ru">По всем вопросам</a>
+    <a href="mailto:arinyhka@yandex.ru">arinyhka@yandex.ru</a>
+    <a href="tel:+79272620426">+79272620426</a>
+  </div>
+    <span>&copy; 2022 И.В.Сударикова</span>
+    <div class="footIcons">
+      <a href="https://vk.com/id60577503"><img src="icons/vk.png" alt="vkIcon"></a>
+      <a href="https://www.instagram.com/sudarikova4895"><img src="icons/instagram.png" alt="instIcon"></a>
+      <a href="viber://chat?number=%2B79272620426"><img src="icons/viber.png" alt="viberIcon"></a>
+      <a href="whatsapp://send?phone=79272620426"><img src="icons/whatsapp.png" alt="whatsappIcon"></a>
+    </div>
+  </div>
+</footer>
+      <script src="js/script.js"></script>
+      <script src="js/script1.js"></script>
 </body>
 </html>
