--- a/index.html
+++ b/index.html
@@ -12,36 +12,51 @@
   <body>
     <header class="container">
       <div class="logo">
-        <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+        <a href="index.html"><img src="images/logo.png" alt="logo" /></a>
       </div>
+      <div class="openMenu">&#9776;</div>
       <nav class="menu">
-       <ul>
-        <li><a href="index.html">Главная</a></li>
-        <li class="colorLemon">
-         <div class="dropDownList">Услуги
-           <nav class="subMenu">
-             <a href="traninng.html">Тренинги</a>
-             <a href="consultation.html">Консультации</a>
-             <a href="supportGroup.html">Группы поддержки</a>
-             <a href="#">Женский клуб</a>
-             <a href="#">Детский клуб</a>
-            </nav>
-         </div>
-        </li>
-        <li class="colorPink"><a href="#" >Статьи</a></li>
-        <li><a href="aboutMe.html">Обо мне</a></li>
-        <li class="colorWhite"><a href="contacts.html">Контакты</a></li>
-       </ul>
+        <ul>
+          <li><a href="index.html">Главная</a></li>
+          <li class="colorLemon">
+            <div class="dropDownList">
+              Услуги
+              <nav class="subMenu">
+                <a href="traninng.html">Тренинги</a>
+                <a href="consultation.html">Консультации</a>
+                <a href="supportGroup.html">Группы поддержки</a>
+                <a href="womenClub.html">Женский клуб</a>
+                <a href="childClub.html">Детский клуб</a>
+              </nav>
+            </div>
+          </li>
+          <li class="adaptiveSubMenu"><a href="traninng.html">Тренинги</a></li>
+          <li class="adaptiveSubMenu">
+            <a href="consultation.html">Консультации</a>
+          </li>
+          <li class="adaptiveSubMenu">
+            <a href="supportGroup.html">Группы поддержки</a>
+          </li>
+          <li class="adaptiveSubMenu">
+            <a href="womenClub.html">Женский клуб</a>
+          </li>
+          <li class="adaptiveSubMenu">
+            <a href="childClub.html">Детский клуб</a>
+          </li>
+          <li class="colorPink"><a href="stories.html">Истории</a></li>
+          <li><a href="aboutMe.html">Обо мне</a></li>
+          <li class="colorWhite"><a href="contacts.html">Контакты</a></li>
+        </ul>
       </nav>
     </header>
     <section class="first-section">
-      <div class="info">
-        <h1>Cоциальный педагог <br> Ирина Сударикова</h1>
-        <p>Тренинги, консультации, группы поддержки детей и взрослых</p>
-      </div>
-      <div class="block1"></div>
-      <div class="block2"><a href="#">записаться</a></div>
     </section>
+    <div class="info">
+      <h1>Cоциальный педагог <br> Ирина Сударикова</h1>
+      <p>Тренинги, консультации, группы поддержки детей и взрослых</p>
+      <div class="infoColorPink"><a href="contacts.html">записаться</a></div></div>
+    </div>
+    
     <section class="areas">
       <h1>Направления в которых я работаю</h1>
       <div class="areasGrid">
@@ -50,7 +65,7 @@
           <div class="gridInfo">
             <h1>Тренинги</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
+              Практика социально-психологического воздейсвия, основанная на активных методах групповой работы
             </p>
             <a href="traninng.html">перейти</a>
           </div>
@@ -60,7 +75,7 @@
           <div class="gridInfo">
             <h1>Констультации</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
+              Уважать, понимать, принимать, помогать
             </p>
             <a href="consultation.html">перейти</a>
           </div>
@@ -70,7 +85,7 @@
           <div class="gridInfo">
             <h1>Группы поддержки</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
+              Создаем условия для самоисследования. Приходим от уникальности ситуации к ее универсальности
             </p>
             <a href="supportGroup.html">перейти</a>
           </div>
@@ -79,16 +94,16 @@
         <img src="images/childClub.jpg" alt="childClub" />
         <div class="gridInfo">
           <h1>Детский клуб</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam</p>
-          <a href="#">перейти</a>
+          <p>Учимся справляться с эмоциями и направлять их в благое русло</p>
+          <a href="childClub.html">перейти</a>
         </div>
       </div>
       <div class="grid5 areaScale">
         <img src="images/womenClub.jpg" alt="womenClub" />
         <div class="gridInfo">
           <h1>Женский клуб</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam</p>
-          <a href="#">перейти</a>
+          <p>Белое крыло, судьбы, песни, споры. Клуб живет теплом жизненных узоров...</p>
+          <a href="womenClub.html">перейти</a>
         </div>
       </div>
       <div class="grid6"></div>
@@ -103,19 +118,20 @@
       <div class="grid15"></div>
     </section>
     <footer class="footContainer">
-<div class="footContacts">
-  <a href="mailto:arinyhka@yandex.ru">по всем вопросам</a>
-  <a href="mailto:arinyhka@yandex.ru">arinyhka@yandex.ru</a>
-  <a href="tel:+79272620426"></a>+79272620426
-</div>
-  <span>&copy; 2022 И.В.Сударикова</span>
-  <div class="footIcons">
-    <a href="https://vk.com/id60577503"><img src="icons/vk.png" alt="vkIcon"></a>
-    <a href="#"><img src="icons/instagram.png" alt="instIcon"></a>
-    <a href="#"><img src="icons/viber.png" alt="viberIcon"></a>
-    <a href="#"><img src="icons/whatsapp.png" alt="whatsappIcon"></a>
-  </div>
-</div>
+      <div class="footContacts">
+        <a href="mailto:arinyhka@yandex.ru">По всем вопросам</a>
+        <a href="mailto:arinyhka@yandex.ru">arinyhka@yandex.ru</a>
+        <a href="tel:+79272620426">+79272620426</a>
+      </div>
+        <span>&copy; 2022 И.В.Сударикова</span>
+        <div class="footIcons">
+          <a href="https://vk.com/id60577503"><img src="icons/vk.png" alt="vkIcon"></a>
+          <a href="https://www.instagram.com/sudarikova4895"><img src="icons/instagram.png" alt="instIcon"></a>
+          <a href="viber://chat?number=%2B79272620426"><img src="icons/viber.png" alt="viberIcon"></a>
+          <a href="whatsapp://send?phone=79272620426"><img src="icons/whatsapp.png" alt="whatsappIcon"></a>
+        </div>
+      </div>
     </footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
