--- a/traninng.html
+++ b/traninng.html
@@ -11,31 +11,45 @@
       href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Montserrat:wght@100;400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/traning.css">
 </head>
 <body>
   <header class="container">
     <div class="logo">
-      <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+      <a href="index.html"><img src="images/logo.png" alt="logo" /></a>
     </div>
+    <div class="openMenu">&#9776;</div>
     <nav class="menu">
-     <ul>
-      <li><a href="index.html">Главная</a></li>
-      <li class="colorLemon">
-       <div class="dropDownList">Услуги
-         <nav class="subMenu">
-           <a href="traninng.html">Тренинги</a>
-           <a href="consultation.html">Консультации</a>
-           <a href="supportGroup.html">Группы поддержки</a>
-           <a href="#">Женский клуб</a>
-           <a href="#">Детский клуб</a>
-          </nav>
-       </div>
-      </li>
-      <li class="colorPink"><a href="#" >Статьи</a></li>
-      <li><a href="aboutMe.html">Обо мне</a></li>
-      <li class="colorWhite"><a href="contacts.html">Контакты</a></li>
-     </ul>
+      <ul>
+        <li><a href="index.html">Главная</a></li>
+        <li class="colorLemon">
+          <div class="dropDownList">
+            Услуги
+            <nav class="subMenu">
+              <a href="traninng.html">Тренинги</a>
+              <a href="consultation.html">Консультации</a>
+              <a href="supportGroup.html">Группы поддержки</a>
+              <a href="womenClub.html">Женский клуб</a>
+              <a href="childClub.html">Детский клуб</a>
+            </nav>
+          </div>
+        </li>
+        <li class="adaptiveSubMenu"><a href="traninng.html">Тренинги</a></li>
+        <li class="adaptiveSubMenu">
+          <a href="consultation.html">Консультации</a>
+        </li>
+        <li class="adaptiveSubMenu">
+          <a href="supportGroup.html">Группы поддержки</a>
+        </li>
+        <li class="adaptiveSubMenu">
+          <a href="womenClub.html">Женский клуб</a>
+        </li>
+        <li class="adaptiveSubMenu">
+          <a href="childClub.html">Детский клуб</a>
+        </li>
+        <li class="colorPink"><a href="stories.html">Истории</a></li>
+        <li><a href="aboutMe.html">Обо мне</a></li>
+        <li class="colorWhite"><a href="contacts.html">Контакты</a></li>
+      </ul>
     </nav>
   </header>
       <section class="traningPage">
@@ -45,51 +59,56 @@
               <li>исследование психологических проблем участников группы и оказание помощи в их решении</li> 
               <li>улучшение субъективного самочувствия и укрепление психического здоровья</li>  
               <li>изучение  психологических закономерностей  механизмов и эффективных способов межличностного взаимодействия</li> 
-              <li>развитие самосознания и само- исследования </li> 
+              <li>развитие самосознания и самоисследования </li> 
               <li>содействие процессу личностного развития.</li> </ul></p>
             </div>
             <img src="images/trainingPicture.jpg" alt="trainingPicture" class="trainingPicture">
           </div>
-            <div class="tranings">
+            <div class="traningsPage">
               <h1>Направления моих тренингов</h1>
-              <details>
-              <summary>Тренинги личностного роста</summary>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quam, inventore consequatur nesciunt, exercitationem rem deleniti pariatur fugit mollitia repellat asperiores ex magni laboriosam ad ratione eveniet laudantium quae quaerat.</p>
-            </details>
-            <details>
-              <summary>Тренинги общения</summary>
-              <p>Важным фактором психического развития в подростковом возрасте является  общение со сверстниками, которое выделяют  в качестве ведущей деятельности. 
-                Центральное личностное новообразование этого периода - становление нового уровня самосознания, Я-концепции, выражающей в стремлении понять себя свои возможности и особенности, своё сходство с другими людьми и своё отличие - уникальность и неповторимость. 
-                Подросток на наших занятиях смотрит на себя как бы "извне", сопоставляет себя с другими - взрослыми и сверстниками - ищет критерии для такого сравнения. 
-                Благодаря этому у подростка вырабатываются некоторые собственные критерии оценки себя, и он переходит от взгляда "извне" на взгляд "изнутри".</p>
-            </details>
-            <details>
-              <summary>Женские тренинги</summary>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quam, inventore consequatur nesciunt, exercitationem rem deleniti pariatur fugit mollitia repellat asperiores ex magni laboriosam ad ratione eveniet laudantium quae quaerat.</p>
-            </details>
-            <details>
-              <summary>Методические тренинги</summary>
-              <p>Для проведения любого тренинга требуются определённые знания о правилах и принципах тренинговой работы, особенностях участников, которые присутствуют на тренинге, о методах и формах организации тренинга, видах тренинговых упражнений и способах их проведения. 
-                Овладеть данными знаниями и приобрести опыт эффективного их применения возможно на методическим тренинге. 
-                <br>
-                Данный вид тренинга предназначен для специалистов, людей с педагогическим и психологическим образованием, людей, имеющих опыт  прохождения тренингов.</p>
-            </details>
+              <div class="tranings">
+                  <div class="traning">
+                    <h3>Тренинги личностного роста</h3>
+                    <p>Это, прежде всего, тренинг самопознания. 
+                    Участники, как правило, приходят на такой тренинг, чтобы лучше понять себя. 
+                    Что это значит? 
+                    Человек, постепенно, делает свою жизнь контролируемой и управляемой<br>
+                    <b>Личностный тренинг</b> - это про принятие и экологичность. <br>
+                    <b>Личностный тренинг</b> - это про горизонтальную позицию тренера по отношению к участнику группы. <br>
+                    <b>Личностный тренинг</b> - это про гибкость. <br>
+                    <b>Личностный тренинг</b> - это про интерес. Интерес к участнику со стороны тренера и группы, интерес к самому себе и собственной жизни.</p>
+                  </div>
+                  <div class="traning traningBGWhite"> <h3>Тренинги общения</h3>
+                    <p>Важным фактором психического развития в подростковом возрасте является  общение со сверстниками, которое выделяют  в качестве ведущей деятельности. 
+                    Центральное личностное новообразование этого периода - становление нового уровня самосознания, Я-концепции, выражающей в стремлении понять себя свои возможности и особенности, своё сходство с другими людьми и своё отличие - уникальность и неповторимость. 
+                    Подросток на наших занятиях смотрит на себя как бы "извне", сопоставляет себя с другими - взрослыми и сверстниками - ищет критерии для такого сравнения. 
+                    Благодаря этому у подростка вырабатываются некоторые собственные критерии оценки себя, и он переходит от взгляда "извне" на взгляд "изнутри".</p>
+                  </div>
+                  <div class="traning"> 
+                    <h3>Методические тренинги</h3>
+                    <p>Для проведения любого тренинга требуются определённые знания о правилах и принципах тренинговой работы, особенностях участников, которые присутствуют на тренинге, о методах и формах организации тренинга, видах тренинговых упражнений и способах их проведения. 
+                    Овладеть данными знаниями и приобрести опыт эффективного их применения возможно на методическим тренинге. 
+                    <br>
+                    Данный вид тренинга предназначен для специалистов, людей с педагогическим и психологическим образованием, людей, имеющих опыт  прохождения тренингов.</p>
+                  </div>
+              </div>
           </div>
       </section>
       <footer class="footContainer">
         <div class="footContacts">
-          <a href="mailto:arinyhka@yandex.ru">по всем вопросам</a>
+          <a href="mailto:arinyhka@yandex.ru">По всем вопросам</a>
           <a href="mailto:arinyhka@yandex.ru">arinyhka@yandex.ru</a>
-          <a href="tel:+79272620426"></a>+79272620426
+          <a href="tel:+79272620426">+79272620426</a>
         </div>
           <span>&copy; 2022 И.В.Сударикова</span>
           <div class="footIcons">
             <a href="https://vk.com/id60577503"><img src="icons/vk.png" alt="vkIcon"></a>
-            <a href="#"><img src="icons/instagram.png" alt="instIcon"></a>
-            <a href="#"><img src="icons/viber.png" alt="viberIcon"></a>
-            <a href="#"><img src="icons/whatsapp.png" alt="whatsappIcon"></a>
+            <a href="https://www.instagram.com/sudarikova4895"><img src="icons/instagram.png" alt="instIcon"></a>
+            <a href="viber://chat?number=%2B79272620426"><img src="icons/viber.png" alt="viberIcon"></a>
+            <a href="whatsapp://send?phone=79272620426"><img src="icons/whatsapp.png" alt="whatsappIcon"></a>
           </div>
         </div>
-            </footer>
+      </footer>
+            <script src="js/script.js"></script>
 </body>
 </html>
